# dev-boost

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  catalog.toml  install.sh  profiles.toml
engine/: .gitignore  README.md  pyinstaller_entry.py  pyproject.toml
engine/devboost/: __main__.py  cli.py  graph.py  log.py  manifest.py  osinfo.py  plan.py  profile.py  runner.py
engine/src/devboost/: __init__.py  model.py
engine/tests/: conftest.py  test_cli.py  test_graph.py  test_integration_profiles.py  test_manifest.py  test_osinfo.py  test_plan.py  test_profile.py  test_runner.py  test_ubuntu_parity.py
engine/tests/accounts/: test_bootstrap.py  test_config.py  test_form.py  test_reconcile.py
engine/tests/cli/: conftest.py  test_accounts_cli.py  test_app_selection.py  test_brain_cli.py  test_brain_helpers.py  test_cli.py  test_doctor_resources.py  test_lifecycle_devhygiene.py  test_selection.py
engine/tests/core/: test_graph_profiles_plan_runner.py  test_model_registry.py  test_osinfo.py  test_plan_families.py  test_selfupdate.py
engine/tests/dotfiles/: test_fleet.py
engine/tests/exec/: test_demoting_executor.py  test_executor.py
engine/tests/media/: test_autoinstall.py  test_builder.py  test_cache.py  test_catalog.py  test_cli_installer.py  test_config.py  test_devices.py  test_download.py  test_errors.py  test_kickstart_pre.py  test_kickstart_syntax.py  test_marker.py  test_mirror.py  test_preview.py  test_probe.py  test_report.py  test_stages.py  test_ventoy.py  test_wizard.py
engine/tests/modules/: test_apps.py  test_base.py  test_browser_view.py  test_caddy.py  test_code_server.py  test_crossarch_build.py  test_dev_stacks.py  test_docker_ddev.py  test_gnome.py  test_herdr.py  test_lsp_servers.py  test_mosh.py  test_multimedia_editors.py  test_optional_ubuntu.py  test_secrets_ssh.py  test_server.py  test_shell.py  (+4 more)
(+694 files in other folders)
