[project]
name = "devboost"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.21,<0.22"]

[project.scripts]
devboost = "devboost.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
files = ["devboost"]

[tool.ruff]
line-length = 100
