[project]
name = "devboost"
version = "0.1.4"
description = "dev-boost — typed-Python developer-workstation bootstrap engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "loguru>=0.7",
    "tenacity>=9.0",
    "questionary>=2.0",
    "rich>=13.7",
]

[project.scripts]
devboost = "devboost.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "mypy>=1.13",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Keep the pyreview house style (classic Generic[T], not PEP 695 type params).
ignore = ["UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
# Typer reads list-argument defaults at decoration time, not via a shared mutable,
# so its idiomatic `arg: list[str] = []` is safe here.
"src/devboost/cli/app.py" = ["B006"]
"src/devboost/cli/installer.py" = ["B006"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "unit: hermetic, no real system access (default)",
    "integration: touches a real system / VM",
]
